[gd_scene load_steps=10 format=3 uid="uid://buhupojqenq2e"]

[ext_resource type="Script" path="res://Chest.gd" id="1_jna5o"]
[ext_resource type="Texture2D" uid="uid://bbjsdwt3jqk5y" path="res://assets/dungeon/chest_full_open_anim_f0.png" id="2_6o7yp"]
[ext_resource type="Shader" path="res://flash.gdshader" id="2_42q36"]
[ext_resource type="Texture2D" uid="uid://dtaum2pm5qtdy" path="res://assets/dungeon/chest_full_open_anim_f1.png" id="3_2c058"]
[ext_resource type="Texture2D" uid="uid://c5q1gggkgrud5" path="res://assets/dungeon/chest_full_open_anim_f2.png" id="4_fh4t1"]
[ext_resource type="Texture2D" uid="uid://dr7ppvc6ge54f" path="res://assets/neutral_light.webp" id="5_oe8w3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x6d4u"]
shader = ExtResource("2_42q36")
shader_parameter/active = false
shader_parameter/frequency = 20.0

[sub_resource type="SpriteFrames" id="SpriteFrames_p2w78"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6o7yp")
}, {
"duration": 1.0,
"texture": ExtResource("3_2c058")
}, {
"duration": 1.0,
"texture": ExtResource("4_fh4t1")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lu1j0"]
size = Vector2(16, 16)

[node name="Chest" type="Node2D"]
script = ExtResource("1_jna5o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_x6d4u")
sprite_frames = SubResource("SpriteFrames_p2w78")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_lu1j0")

[node name="PointLight2D2" type="PointLight2D" parent="."]
shadow_enabled = true
texture = ExtResource("5_oe8w3")
texture_scale = 0.4

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
